--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,21 @@
     <link rel="stylesheet" href="css/main.css">
     <script defer src="js/main.js"></script>
 </head>
+
 <body>
-  
+    <h1>Slot Machine</h1>
+    <div class="results"></div>
+
+    <div id="board">
+        <div class="slots">
+            <div class="slot1"> </div>
+            <div class="slot2"></div>
+            <div class="slot3"></div>
+        </div>
+    </div>
+
+    <button class="button1">SPIN</button>
+
 </body>
+
 </html>
