--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
     <h1>Slot Machine</h1>
     <div class="results"></div>
-
+    <p
+        style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQKGoXPMghiYCKZFkdaAg_6rQ53qlR65U4Fow&usqp=CAU);">
+    </p>
     <div id="board">
         <div class="slots">
             <div class="slot1"> </div>
